security/mtls.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: agenttrace-mtls
  namespace: agenttrace
spec:
  mtls:
    mode: STRICT
