security/peer-authentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: agenttrace
  namespace: agenttrace
spec:
  mtls:
    mode: STRICT
